data/all_generated_tests/raw_wast_tests/if_StackCorruption_1397.wast
;; 8. **Jumping to Non-existent Labels**:    - **Focus**: Error in label handling for control flow.    - **Description**: Use a branch instruction within `if` targeting labels that do not exist or are not within the valid scope. Test how each implementation handles the stack in erroneous jumps.

(assert_invalid
  (module
    (func $invalid-label-jump
      (block
        (if (i32.const 1)
          (then
            (br 1)
          )
        )
      )
    )
  )
  "invalid label"
)